2025-08-15) 정리